--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1, h2 {
+    @apply font-oswald;
+  }
+  h3, h4 {
+    @apply font-barlow;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    @apply text-stone-900 dark:text-slate-100;
+  }
+  *:not(h1, h2, h3, h4) {
+    @apply font-source text-stone-600 dark:text-stone-400;
+  }
+  body {
+    @apply bg-slate-100 dark:bg-stone-950 subpixel-antialiased;
+  }
+  h1 { 
+    @apply text-5xl md:text-6xl;
+  }
+  h2 { 
+    @apply text-4xl md:text-5xl;
+  }
+  h3 { 
+    @apply text-3xl md:text-4xl;
+  }
+  h4 { 
+    @apply text-2xl md:text-3xl;
+  }
+  h5 { 
+    @apply font-bold text-xl md:text-2xl;
+  }
+  h6 { 
+    @apply font-bold text-lg md:text-xl;
+  }
+  p, span { 
+    @apply text-lg md:text-xl;
+  }
+}
+
+@layer components {
+  .markdown {
+    @apply  inline-block whitespace-nowrap px-2 m-1 rounded-md font-medium text-rose-700 dark:text-rose-700 bg-stone-50 dark:bg-stone-900 ring-1 ring-inset ring-stone-300/10 dark:ring-stone-300/10;
+  }
+}
+
+@layer utilities {
+
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,11 +66,11 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  overflow-x: hidden;
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
